--- a/003.JS학습/JS1.기본사용법.html
+++ b/003.JS학습/JS1.기본사용법.html
@@ -191,7 +191,7 @@
             예) document.querySelector('#my>1i')
             -> 만나는 첫번째 li요소를 선택함
             
-            2. querySelectorSll(CSS선택자)
+            2. querySelectorAll(CSS선택자)
             -> 선택자에 맞는 요소를 모두 가져옴!
             -> html요소 컬렉션에 담겨서 저장됨
             -> 순번과 개수를 구할 수 있음
